Fix footer exceeding width on mobile layout

--- a/src/stylesheets/_base.scss
+++ b/src/stylesheets/_base.scss
@@ -84,7 +84,6 @@ $grid-line-width: 1.5px;
 
   .fittable-container {
     background: white;
-    padding-bottom: 30px;
   }
 }
 
