--- a/src/stylesheets/components/_footer.scss
+++ b/src/stylesheets/components/_footer.scss
@@ -8,6 +8,7 @@
     background: #363636;
     color: white;
     padding-top: 0;
+    margin: 0 !important;
   }
 
   img {
